# bright-lang

./: .gitignore  Cargo.toml  LICENSE  WHITEPAPER.md
bright-lang/: Cargo.toml
bright-lang-ast/: Cargo.toml
bright-lang-ast/src/: core.rs  expr.rs  func.rs  lib.rs
bright-lang-errs/: Cargo.toml
bright-lang-errs/src/: lib.rs  source_location.rs
bright-lang-lexer/: Cargo.toml
bright-lang-lexer/src/: lib.rs
bright-lang-parser/: Cargo.toml
bright-lang-parser/src/: cast.rs  context.rs  expr.rs  func.rs  lib.rs  op.rs  top_level.rs  type.rs
bright-lang-types/: Cargo.toml
bright-lang-types/src/: lib.rs
bright-lang/src/: main.rs
