[package]
name = "bright-lang-ast"
version = "0.1.0"
authors = ["theidiotmachine <dinsdt@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
bright-lang-errs = { path = "../bright-lang-errs" }
bright-lang-types = { path = "../bright-lang-types" }