[package]
name = "bright-lang-lexer"
version = "0.1.0"
authors = ["theidiotmachine <dinsdt@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
unicode-segmentation = "1.6.0"
bright-lang-errs = { path = "../bright-lang-errs" }
